--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>banana speak</title>
+    <style>
+        textarea {
+            width: 80%;
+            height: 10vh;
+            display: block;
+            margin: 1rem;
+            padding: 1rem;
+        }
+
+        #output {
+            border: 1px solid black;
+            height: 10vh;
+            width: 80%;
+            margin: 1rem;
+            padding: 1rem;
+        }
+    </style>
+    
 </head>
 <body>
     <h1>talk banana</h1>
+    <textarea
+    id="txt-input" 
+    placeholder="put your sentence here"></textarea>
+    <button id="btn-translate">Translate</button>
+
+    <div style="font-size: larger;">Output will come here 👇</div>
+    <div id="output"></div>
+
+
+    <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
